# schemata

./: Cargo.toml  LICENSE.md  README.md
schemata/: Cargo.toml
schemata-core/: Cargo.toml
schemata-core/src/: generate.rs  ir.rs  lib.rs  syntax.rs
schemata-macro/: Cargo.toml  README.md
schemata-macro/src/: lib.rs
schemata/src/: lib.rs
schemata/tests/: simple.rs
