[package]
name = "schemata-macro"
version = "0.1.0"
edition = "2021"
authors = ["Penumbra Labs <team@penumbra.zone>"]
description = "Macro definitions for the `schemata` crate"
repository = "https://github.com/penumbra-zone/schemata/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
schemata-core = { path = "../schemata-core", version = "0.1.0" }
proc-macro-error = "1.0"
proc-macro2 = "1.0"