[package]
name = "schemata"
version = "0.1.0"
edition = "2021"
authors = ["Penumbra Labs <team@penumbra.zone>"]
description = "Type-safe schemata for arbitrary key-value stores"
repository = "https://github.com/penumbra-zone/schemata/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemata-macro = { path = "../schemata-macro", version = "0.1.0" }